--- a/FoodRecommendationApp/app/src/main/res/layout/fragment_db_protein.xml
+++ b/FoodRecommendationApp/app/src/main/res/layout/fragment_db_protein.xml
@@ -6,11 +6,8 @@
     tools:context=".DbProtein">
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="26sp"
-        android:layout_centerInParent="true"
-        android:text="First" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
 
 </RelativeLayout>
