--- a/FoodRecommendationApp/app/src/main/res/layout/fragment_db_protein.xml
+++ b/FoodRecommendationApp/app/src/main/res/layout/fragment_db_protein.xml
@@ -7,7 +7,10 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/dbProteinRecycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        tools:itemCount="5"
+        tools:listitem="@layout"
 
 </RelativeLayout>
