--- a/FoodRecommendationApp/app/src/main/res/layout/fragment_db_protein.xml
+++ b/FoodRecommendationApp/app/src/main/res/layout/fragment_db_protein.xml
@@ -11,6 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:itemCount="5"
-        tools:listitem="@layout"
+        tools:listitem="@layout/food_items"/>
 
 </RelativeLayout>
